samples/_failures_safe/1761124922_6893aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9bb0d85.c: In function ‘main’:
./samples/SAFE/__tmp_c9bb0d85.c:161:16: error: expected ‘;’ at end of input
  161 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_c9bb0d85.c:161:9: error: expected declaration or statement at end of input
  161 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_c9bb0d85.c:161:9: error: expected declaration or statement at end of input
